# raylib_template

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: common.h  game_interface.h  main_desktop.c  main_web.c
src/game/: game.c
